[package]
name = "pipeviewer"
version = "0.1.3"
authors = ["Skshm <eminate894567@pm.me>"]
edition = "2021"
description = "Education Edition of the PV utility made with Nathan Stocks"
homepage = "https://github.com/Midnight1938/My_Rust_Path/tree/pipeviewer"
repository = "https://github.com/Midnight1938/My_Rust_Path/tree/pipeviewer"
readme = "Readme.org"
keywords = ["educational", "course", "nathan"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

# Create a crates.io account
# Then run `cargo publish`
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
crossbeam = "0.8.2"
crossterm ="0.27.0"