[package]
name = "pipeviewer"
version = "0.1.0"
authors = ["Skshm <eminate894567@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
crossbeam = "0.8.2"
# Newer version uses arg! instead of App::with_name